--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   </style>
 </head>
 <body>
+   <script src="script.php"></script>
 
   <!-- Navbar -->
   <nav>
@@ -201,4 +202,5 @@
 
 </body>
 </html>
+
 
