--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
       <div class="project"><img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c"><h4>LAMP Stack Project</h4><p>As a cybersecurity student, building a web application using the LAMP Stack was a valuable exercise in applying both development and security principles. I used the LAMP stack to set up my application: Linux for the server environment, Apache as the web server, MySQL for the database, and PHP for dynamic content.</p></div>
 
-      <div class="project"><img src="https://unsplash.com/photos/a-laptop-and-a-computer-ZoXCoH7tja0"><h4>Threat Detection using Splunk</h4><p>As part of my cybersecurity projects, I utilized Splunk's SIEM capabilities for threat detection by leveraging my intermediate knowledge gained through TryHackMe. Using Splunk Enterprise Security, I developed tailored dashboards and configured detection rules to monitor and analyze log data from various sources in near real-time.</p></div>
+      <div class="project"><img src="https://images.unsplash.com/photo-1655036387197-566206c80980"><h4>Threat Detection using Splunk</h4><p>As part of my cybersecurity projects, I utilized Splunk's SIEM capabilities for threat detection by leveraging my intermediate knowledge gained through TryHackMe. Using Splunk Enterprise Security, I developed tailored dashboards and configured detection rules to monitor and analyze log data from various sources in near real-time.</p></div>
     </div>
   </section>
 
