--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
     }
 
+    /* certifications section */
+    .certifications{padding: 60px 50px; background: #f9f9f9;}
   </style>
 </head>
 <body>
@@ -213,6 +215,10 @@
     </div>
   </section>
 
+    <section class="certifications">
+    <h2 class="section-title">Certifications and Badges</h2>
+      <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ERH8LVB6OT.pdf"><a/>
+    </section>
   <!-- Testimonials -->
   <section class="testimonials">
     <h2 class="section-title" style="color:#fff;">Testimonials</h2>
