--- a/index.html
+++ b/index.html
@@ -217,14 +217,16 @@
 
 
   <!-- Certifications -->
-    <section class="project-grid">
-      <div class="project">
-        <h4 class="section-title">Certifications and Badges</h4>
-        <p>
-          This TryHackMe certificate represents a foundational understanding of cybersecurity essentials. It covers pre-security concepts including cyber security basics, networking fundamentals and vulnerabilities, common web attacks, and practical skills in using the Linux operating system. This knowledge is critical before advancing into hacking and ethical hacking practices, ensuring a strong grasp of the fundamentals needed to secure and defend systems.
-        </p>
-        <button class="preview" data-src="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ERH8LVB6OT.pdf">View PDF</button>
-      </div>
+
+  <section class="projects">
+      <h2 class="section-title">Certifications and Badges</h2>
+      <div class="projects-grid">
+        <div class="project">
+          <p>
+            This TryHackMe certificate represents a foundational understanding of cybersecurity essentials. It covers pre-security concepts including cyber security basics, networking fundamentals and vulnerabilities, common web attacks, and practical skills in using the Linux operating system. This knowledge is critical before advancing into hacking and ethical hacking practices, ensuring a strong grasp of the fundamentals needed to secure and defend systems.
+          </p>
+          <button class="preview" data-src="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ERH8LVB6OT.pdf">View PDF</button>
+        </div>
     </section>
   <!-- Testimonials -->
   <section class="testimonials">
