--- a/index.html
+++ b/index.html
@@ -145,8 +145,6 @@
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
     }
 
-    /* certifications section */
-    .certifications{padding: 60px 50px; background: #f9f9f9;}
   </style>
 </head>
 <body>
@@ -222,10 +220,21 @@
       <h2 class="section-title">Certifications and Badges</h2>
       <div class="projects-grid">
         <div class="project">
+          <img src="assets/THM-ERH8LVB6OT.jpeg">
           <p>
             This TryHackMe certificate represents a foundational understanding of cybersecurity essentials. It covers pre-security concepts including cyber security basics, networking fundamentals and vulnerabilities, common web attacks, and practical skills in using the Linux operating system. This knowledge is critical before advancing into hacking and ethical hacking practices, ensuring a strong grasp of the fundamentals needed to secure and defend systems.
           </p>
           <button class="preview" data-src="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ERH8LVB6OT.pdf">View PDF</button>
+        </div>
+
+        <div class="project">
+          <img src="assets/cybrary-cert-comptia-network-plus.jpeg">
+          <p>The completion of Cybrary's Networking Plus certificate demonstrates my commitment to learning and growing
+            in the field of networking. I'm excited to apply these newly acquired skills to real-world scenarios, contributing to efficient network operations. </p>
+        </div>
+
+        <div class="project">
+          <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
         </div>
     </section>
   <!-- Testimonials -->
