--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
             in the field of networking. I'm excited to apply these newly acquired skills to real-world scenarios, contributing to efficient network operations. </p>
         </div>
 
-        <div class="project">
-          <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
-        </div>
+          <iframe class="project" src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
     </section>
   <!-- Testimonials -->
   <section class="testimonials">
