--- a/index.html
+++ b/index.html
@@ -233,8 +233,14 @@
             in the field of networking. I'm excited to apply these newly acquired skills to real-world scenarios, contributing to efficient network operations. </p>
         </div>
 
-          <iframe class="project" src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
+        <div class="project">
+          <img src="./assets/certificate.jpg" >
+          <p>Through the Cyber Threat Intelligence certification, I gained a comprehensive understanding of the cyber threat intelligence lifecycle, including how to collect, analyze, and generate actionable intelligence. I developed skills in identifying adversary tactics, techniques, and procedures (TTPs), utilizing models such as the MITRE ATT&CK framework, and validating threat data to reduce false positives.</p>
+        </div>
     </section>
+
+    <!-- Tryhackme data -->
+    <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
   <!-- Testimonials -->
   <section class="testimonials">
     <h2 class="section-title" style="color:#fff;">Testimonials</h2>
