--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
       margin-bottom: 15px;
     }
 
-    input[type="submit"] button:hover {background: #ff4d6d;}{
+    input[type="submit"] button:hover {background: #ff4d6d;}
+    input[type="submit"] {
       padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
       color: white;
@@ -137,7 +138,8 @@
     /* End of Form styling */
 
     /* view pdf button */
-    .preview button:hover {background: #ff4d6d;}{
+    .preview button:hover {background: #ff4d6d;}
+    .preview {
       padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
     }
@@ -205,7 +207,7 @@
         </div>
 
         <div class="project"><img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c"><h4>LAMP Stack Project</h4><p>As a cybersecurity student, building a web application using the LAMP Stack was a valuable exercise in applying both development and security principles. I used the LAMP stack to set up my application: Linux for the server environment, Apache as the web server, MySQL for the database, and PHP for dynamic content.</p>
-          <button class="preview" data-src="./assets/NET300 - Web Presentation.pdf">View PDF</button>
+          <button class="preview" data-src="assets/NET300 - Web Presentation.pdf">View PDF</button>
         </div>
 
       <div class="project"><img src="https://images.unsplash.com/photo-1655036387197-566206c80980"><h4>Threat Detection using Splunk</h4><p>As part of my cybersecurity projects, I utilized Splunk's SIEM capabilities for threat detection by leveraging my intermediate knowledge gained through TryHackMe. Using Splunk Enterprise Security, I developed tailored dashboards and configured detection rules to monitor and analyze log data from various sources in near real-time.</p></div>
@@ -233,7 +235,7 @@
         </div>
 
         <div class="project">
-          <img src="./assets/certificate.jpg" >
+          <img src="assets/certificate.jpg" >
           <p>Through the Cyber Threat Intelligence certification, I gained a comprehensive understanding of the cyber threat intelligence lifecycle, including how to collect, analyze, and generate actionable intelligence. I developed skills in identifying adversary tactics, techniques, and procedures (TTPs), utilizing models such as the MITRE ATT&CK framework, and validating threat data to reduce false positives.</p>
         </div>
     </section>
@@ -252,6 +254,16 @@
   <!-- hapa ni form itakua na nimeandika backend ya hio contact.php -->
   <section class="contact">
     <h2 class="section-title">Get In Touch</h2>
+      <p>Feel free to reach out....</p>
+      <div><h4>MY CONTACTS</h4>
+        <div class="socials">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin"><a>www.linkedin.com/in/paul-mwaniki-819154368</a></i>
+          <i class="fab fa-github"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
     <div class="contact-info">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                   <label for="name-field" class="pb-2">Your Name</label>
