--- a/index.html
+++ b/index.html
@@ -254,17 +254,19 @@
   <!-- hapa ni form itakua na nimeandika backend ya hio contact.php -->
   <section class="contact">
     <h2 class="section-title">Get In Touch</h2>
+    <div class="contact-info">
       <p>Feel free to reach out....</p>
-      <div><h4>MY CONTACTS</h4>
+      <div>
         <div class="socials">
           <i class="fab fa-facebook"></i>
           <i class="fab fa-twitter"></i>
-          <i class="fab fa-linkedin"><a>www.linkedin.com/in/paul-mwaniki-819154368</a></i>
+          <a href="https://www.linkedin.com/in/paul-mwaniki-819154368" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin"></i> 
+          </a>
           <i class="fab fa-github"></i>
           <i class="fab fa-instagram"></i>
         </div>
       </div>
-    <div class="contact-info">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                   <label for="name-field" class="pb-2">Your Name</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
