--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       text-decoration: none;
       display: inline-block;
     }
-    input[type="submit"] button:hover {background: #ff4d6d;}
+    input[type="submit"]:hover {background: #ff4d6d;}
     /* End of Form styling */
 
     /* view pdf button */
@@ -149,7 +149,7 @@
       padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
     }
-    .preview button:hover {background: #ff4d6d;}
+    .preview:hover {background: #ff4d6d;}
 
   </style>
 </head>
@@ -263,13 +263,10 @@
     <h2 class="section-title">Get In Touch</h2>
         <div class="socials">
           <p>Feel free to reach out....</p>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
           <a href="https://www.linkedin.com/in/paul-mwaniki-819154368" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-linkedin"></i> 
           </a>
           <i class="fab fa-github"></i>
-          <i class="fab fa-instagram"></i>
         </div>
     <div class="contact-info">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
