--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     .socials i {margin: 0 10px; font-size: 22px; transition: color 0.3s; cursor: pointer;}
     .socials i:hover {color: var(--secondary);}
 
+
     /* Form Styling */
     .php-email-form {
       width: 500px;
@@ -116,7 +117,6 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-
     label {
       display: block;
       margin-bottom: 5px;
@@ -269,7 +269,7 @@
           <i class="fab fa-github"></i>
         </div>
     <div class="contact-info">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                   <label for="name-field" class="pb-2">Your Name</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
           
