--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       margin-bottom: 15px;
     }
 
-    input[type="submit"] {
+    .php-email-form input[type="submit"] {
       padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
       font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
       text-align: center;
       text-decoration: none;
       display: inline-block;
     }
-    input[type="submit"]:hover {background: #ff4d6d;}
+    .php-email-form input[type="submit"]:hover {background: #ff4d6d;}
     /* End of Form styling */
 
     /* view pdf button */
@@ -153,7 +153,8 @@
     /* styling the badges from tryhackme */
   .iframe-container {
     display: flex;
-    justify-content: center; /* Centers horizontally */
+    flex-direction: column;
+    align-items: center;     /* horizontally centers */
     margin: 20px 0;
   }
   </style>
@@ -254,8 +255,8 @@
 
     <!-- Tryhackme data -->
     <div class="iframe-container">
-      <p> Live preview of tryhackme </p>
-      <iframe  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;'></iframe>
+      <div> Live preview of tryhackme </div>
+      <iframe  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;width: 800px; height: 600px;'></iframe>
     </div>
   <!-- Testimonials -->
   <section class="testimonials">
