changed form styling

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <!-- Tryhackme data -->
     <div class="iframe-container">
       <div> Live preview of tryhackme </div>
-      <iframe  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;width: 800px; height: 600px;'></iframe>
+      <iframe  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;width: auto; height: auto;'></iframe>
     </div>
   <!-- Testimonials -->
   <section class="testimonials">
