--- a/index.html
+++ b/index.html
@@ -5,195 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paul Mwaniki - ICT Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    * {margin: 0; padding: 0; box-sizing: border-box;}
-    body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f4f4; color: #111;}
-    a {text-decoration: none; color: inherit;}
-    img {max-width: 100%; border-radius: 10px;}
-
-    :root {
-      --primary: #1e3a8a;
-      --secondary: #dc143c;
-      --light: #fff;
-      --dark: #111;
-    }
-
-    /* Navbar */
-    nav {
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 15px 50px; background: var(--primary); position: sticky; top: 0; z-index: 1000;
-    }
-    nav h1 {font-size: 26px; font-weight: bold; color: #fff;}
-    nav ul {list-style: none; display: flex; gap: 25px;}
-    nav ul li a {color: #fff; transition: color 0.3s;}
-    nav ul li a:hover {color: var(--secondary);}
-
-    /* Hero */
-    .hero {
-      height: 90vh; display: flex; align-items: center; justify-content: space-between;
-      padding: 50px; background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c') no-repeat center/cover;
-    }
-    .hero-content {
-      display: flex; align-items: center; justify-content: space-between; width: 100%;
-    }
-    .hero-text {
-      background: rgba(255, 255, 255, 0.9); padding: 40px; border-radius: 15px; max-width: 600px;
-      color: var(--dark);
-    }
-    .hero-text h2 {font-size: 48px; margin-bottom: 15px;}
-    .hero-text p {font-size: 18px; margin-bottom: 25px; line-height: 1.6;}
-    .hero-text button {
-      padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
-      font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
-    }
-    .hero-text button:hover {background: #ff4d6d;}
-    .hero-photo img {width: 380px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.3);}
-
-    /* About */
-    .about {display: flex; gap: 40px; padding: 80px 50px; background: #fff; color: var(--dark);}
-    .about img {width: 350px; border-radius: 20px;}
-    .about-text h3 {font-size: 36px; color: var(--primary); margin-bottom: 20px;}
-    .about-text p {font-size: 18px; line-height: 1.8;}
-
-    /* Services / Skills */
-    .section-title {text-align: center; margin: 60px 0 30px; font-size: 36px; color: var(--primary);}
-    .cards {display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; padding: 0 50px 80px;}
-    .card {
-      background: #fff; padding: 30px; border-radius: 15px; text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {transform: translateY(-10px); box-shadow: 0 6px 20px rgba(0,0,0,0.2);}
-    .card i {font-size: 45px; margin-bottom: 20px; color: var(--secondary);}
-    .card h4 {margin-bottom: 15px; font-size: 22px;}
-
-    /* Projects */
-    .projects {padding: 60px 50px; background: #f9f9f9;}
-    .projects-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;}
-    .project {background: #fff; padding: 20px; border-radius: 15px; transition: transform 0.3s;}
-    .project:hover {transform: scale(1.05);}
-    .project img {border-radius: 12px; margin-bottom: 15px;}
-    .project h4 {color: var(--primary);}
-
-    /* Testimonials */
-    .testimonials {padding: 60px 50px; background: var(--primary);}
-    .testimonial-card {
-      background: #fff; color: var(--dark); padding: 25px; border-radius: 15px; margin: 15px auto; max-width: 700px;
-      text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    .testimonial-card i {font-size: 30px; color: var(--secondary); margin-bottom: 15px;}
-    .testimonial-card h4 {margin-top: 15px; color: var(--primary);}
-
-    /* Contact */
-    .contact {padding: 80px 50px; background: #fff;}
-    .contact-info {display: flex; justify-content: space-around; flex-wrap: wrap; gap: 30px;}
-    .contact-info div {text-align: center;}
-    .contact-info i {font-size: 35px; color: var(--secondary); margin-bottom: 10px;}
-
-    /* Footer */
-    footer {background: var(--dark); color: #ccc; padding: 50px;}
-    .footer-grid {
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 25px; text-align: center;
-    }
-    .footer-grid h4 {margin-bottom: 15px; color: var(--light);}
-    .footer-grid ul {list-style: none;}
-    .footer-grid ul li {margin: 8px 0;}
-    .footer-grid ul li a:hover {color: var(--secondary);}
-    .socials{
-      display: flex;
-      flex-direction: column; /* stack vertically */
-      align-items: center;    /* center horizontally */
-      text-align: center;     /* center text inside */
-      gap: 10px;              /* space between items */
-    }
-    .socials i {margin: 0 10px; font-size: 22px; transition: color 0.3s; cursor: pointer;}
-    .socials i:hover {color: var(--secondary);}
-
-
-    /* Form Styling */
-    .php-email-form {
-      width: 500px;
-      margin: 0 auto;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-sizing: border-box;
-      margin-bottom: 15px;
-    }
-
-    .php-email-form button[type="submit"] {
-      padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
-      font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .php-email-form button[type="submit"]:hover {background: #ff4d6d;}
-    /* End of Form styling */
-
-    /* view pdf button */
-    .preview {
-      padding: 14px 28px; background: var(--secondary); border: none; border-radius: 30px;
-      font-size: 18px; cursor: pointer; transition: background 0.3s; color: #fff;
-    }
-    .preview:hover {background: #ff4d6d;}
-
-    /* styling the badges from tryhackme */
-  .iframe-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;  /* vertical alignment, but only within container height */
-    align-items: center;     /* horizontally centers */
-    margin: 20px 0;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="background.css">
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav>
-    <h1><i class="fas fa-laptop-code"></i> Paul Mwaniki</h1>
-    <ul>
-      <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#"><i class="fas fa-user"></i> About</a></li>
-      <li><a href="#"><i class="fas fa-cogs"></i> Services</a></li>
-      <li><a href="#"><i class="fas fa-briefcase"></i> Projects</a></li>
-      <li><a href="#"><i class="fas fa-users"></i> Testimonials</a></li>
-      <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
-    </ul>
-  </nav>
+<nav>
+  <h1><i class="fas fa-laptop-code"></i> Paul Mwaniki</h1>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+  <ul class="nav-menu">
+    <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+    <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+    <li><a href="#skills"><i class="fas fa-cogs"></i> Services</a></li>
+    <li><a href="#projects"><i class="fas fa-briefcase"></i> Projects</a></li>
+    <li><a href="#testimonials"><i class="fas fa-users"></i> Testimonials</a></li>
+    <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+  </ul>
+</nav>
 
   <!-- Hero -->
-  <section class="hero">
-    <div class="hero-content">
-      <div class="hero-text">
-        <h2>Hello, I'm <br><span style="color: var(--secondary);">Paul Mwaniki </span></h2>
-  <div class="buttons">
-  <button><i class="fas fa-file-download"></i> Download CV</button>
-  <button><i class="fas fa-tasks"></i> All My Projects</button>
-</div>
 
-      <div class="hero-photo">
-        <img src="https://images.unsplash.com/photo-1603415526960-f7e0328eaa8d" alt="Paul Mwaniki">
-      </div>
-    </div>
+  <section class="background-container">
+	  <section class="background-div">
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+			  <div class="bubble"></div>
+	  </section>
+	  <section class="hero" "content-div" id="home"> 
+		  <div class="hero-text">
+			  <div class="buttons">
+				  <h2>Hello, I'm <br><span style="color: var(--secondary);">Paul Mwaniki </span></h2>
+				  <p>Cybersecurity student | Site manager</p>
+				  <!--- <button><i class="fas fa-file-download"></i> Download CV</button> ---->
+				  <button><a href="#projects"><i class="fas fa-tasks"></i> All My Projects</a></button>
+			  </div>
+
+			  <div class="hero-photo">
+				  <img src="https://images.pexels.com/photos/30284240/pexels-photo-30284240.jpeg" alt="Paul Mwaniki">
+			  </div>
+		  </div>
+	  </section>
   </section>
-
   <!-- About -->
-  <section class="about">
-    <img src="it.jpg" alt="About Me">
+  <section class="about" id="about">
     <div class="about-text">
       <h3>About Me</h3>
           <p>I'm a passionate cybersecurity student with a strong foundation in ;; ethical hacking, network security and penetration
@@ -203,17 +108,19 @@
   </section>
 
   <!-- Skills / Services -->
-  <h2 class="section-title">My Skills & Services</h2>
-  <section class="cards">
-    <div class="card"><i class="fas fa-network-wired"></i><h4>Network Security</h4><p>Designing and implementing firewall rules, VPNs, and intrusion detection/prevention systems.</p></div>
-    <div class="card"><i class="fas fa-database"></i><h4>Database Management</h4><p>SQL/NoSQL database solutions, optimization, and administration.</p></div>
-    <div class="card"><i class="fas fa-lock"></i><h4>Security Assessments and Audits</h4><p>Comprehensive reviews of security posture, compliance checks, and risk analysis.</p></div>
-    <div class="card"><i class="fas fa-tools"></i><h4>IT Support &amp Troubleshooting</h4><p>Diagnosing and resolving hardware/software issues.</p></div>
-    <div class="card"><i class="fas fa-tools"></i><h4>Penetration Testing </h4><p>Ethical hacking to identify vulnerabilities in systems, networks, and applications.</p></div>
+  <section id="skills">
+	  <h2 class="section-title" >My Skills & Services</h2>
+	  <div class="cards" >
+		  <div class="card"><i class="fas fa-network-wired"></i><h4>Network Security</h4><p>Designing and implementing firewall rules, VPNs, and intrusion detection/prevention systems.</p></div>
+		  <div class="card"><i class="fas fa-database"></i><h4>Database Management</h4><p>SQL/NoSQL database solutions, optimization, and administration.</p></div>
+		  <div class="card"><i class="fas fa-lock"></i><h4>Security Assessments and Audits</h4><p>Comprehensive reviews of security posture, compliance checks, and risk analysis.</p></div>
+		  <div class="card"><i class="fas fa-tools"></i><h4>IT Support &amp Troubleshooting</h4><p>Diagnosing and resolving hardware/software issues.</p></div>
+		  <div class="card"><i class="fas fa-tools"></i><h4>Penetration Testing </h4><p>Ethical hacking to identify vulnerabilities in systems, networks, and applications.</p></div>
+	  </div>
   </section>
 
   <!-- My Projects -->
-  <section class="projects">
+  <section class="projects" id="projects">
     <h2 class="section-title">My Projects</h2>
     <div class="projects-grid">
       <div class="project"><img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f"><h4>Risk Management Simulation on a Healthcare Organization</h4><p>The risk management process is a systematic approach used to identify, assess, and mitigate risks that could negatively impact an organization’s operations, assets, or stakeholders.</p>
@@ -239,7 +146,6 @@
           <p>
             This TryHackMe certificate represents a foundational understanding of cybersecurity essentials. It covers pre-security concepts including cyber security basics, networking fundamentals and vulnerabilities, common web attacks, and practical skills in using the Linux operating system. This knowledge is critical before advancing into hacking and ethical hacking practices, ensuring a strong grasp of the fundamentals needed to secure and defend systems.
           </p>
-          <button class="preview" data-src="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ERH8LVB6OT.pdf">View PDF</button>
         </div>
 
         <div class="project">
@@ -252,7 +158,12 @@
           <img src="assets/certificate.jpg" >
           <p>Through the Cyber Threat Intelligence certification, I gained a comprehensive understanding of the cyber threat intelligence lifecycle, including how to collect, analyze, and generate actionable intelligence. I developed skills in identifying adversary tactics, techniques, and procedures (TTPs), utilizing models such as the MITRE ATT&CK framework, and validating threat data to reduce false positives.</p>
         </div>
-    </section>
+    
+        <div class="project">
+          <img src="assets/cybrary-cert-security-general-security-concepts.jpeg" >
+          <p>It is through the Cybrary General Security Concepts course that I gained a solid foundation in essential cybersecurity principles. This course taught me critical topics such as physical security, data integrity, non-repudiation, and public key infrastructure. The hands-on labs and expert-led lessons equipped me with practical skills and a deeper understanding needed to confidently protect information systems.</p>
+        </div>
+  </section>
 
     <!-- Tryhackme data -->
     <div class="iframe-container">
@@ -260,7 +171,7 @@
       <iframe  src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4408819" style='border:none;width: auto; height: auto;'></iframe>
     </div>
   <!-- Testimonials -->
-  <section class="testimonials">
+  <section class="testimonials" id="testimonials">
     <h2 class="section-title" style="color:#fff;">Testimonials</h2>
     <div class="testimonial-card"><i class="fas fa-quote-left"></i><p>“Paul delivered our ICT system on time and with excellent professionalism. Highly recommend his services.”</p><h4>- Madam Dammaris MULWA</h4></div>
     <div class="testimonial-card"><i class="fas fa-quote-left"></i><p>“The networking solutions were secure and reliable. Paul is truly an ICT expert.”</p><h4>- Victor Gachango</h4></div>
@@ -269,7 +180,7 @@
   <!-- Contact -->
   <!-- hapa tuliambiwa tusieke number ya simu ama email -->
   <!-- hapa ni form itakua na nimeandika backend ya hio contact.php -->
-  <section class="contact">
+  <section class="contact" id="contact">
     <h2 class="section-title">Get In Touch</h2>
         <div class="socials">
           <p>Feel free to reach out....</p>
@@ -300,8 +211,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-grid">
-      <div><h4>About</h4><ul><li><a href="#">Who I Am</a></li><li><a href="#">My Skills</a></li><li><a href="#">Experience</a></li></ul></div>
-      <div><h4>Navigation</h4><ul><li><a href="#">Home</a></li><li><a href="#">Services</a></li><li><a href="#">Projects</a></li></ul></div>
+      <div><h4>Navigation</h4><ul><li><a href="#home">Home</a></li><li><a href="#skills">Services</a></li><li><a href="#projects">Projects</a></li></ul></div>
       <div><h4>Follow Me</h4><div class="socials"><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i><i class="fab fa-linkedin"></i><i class="fab fa-github"></i><i class="fab fa-instagram"></i></div></div>
     </div>
     <p style="text-align:center; margin-top:20px;">&copy; 2025 Paul Mwaniki . All Rights Reserved.</p>
