added profile photo image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			  </div>
 
 			  <div class="hero-photo">
-				  <img src="https://images.pexels.com/photos/30284240/pexels-photo-30284240.jpeg" alt="Paul Mwaniki">
+				  <img src="assets/IMG-20250525-WA0001.jpg" alt="Paul Mwaniki">
 			  </div>
 		  </div>
 	  </section>
